// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBody component component matches snapshot when Done is active 1`] = `
<Fragment>
  <DonePanel />
</Fragment>
`;

exports[`FormBody component component matches snapshot when Privacy is active 1`] = `
<Fragment>
  <PrivacyPanel
    onDoneClick={[Function]}
  />
</Fragment>
`;

exports[`FormBody component component matches snapshot when User is active 1`] = `
<Fragment>
  <UserPanel
    onDoneClick={[Function]}
  />
</Fragment>
`;
